# Lab14-AI-Evaluation-Benchmarking-stardust-zip

./: .gitignore  main.py  phan-nhiem-vu.md  pyproject.toml  shell.nix  step-guides.md
.direnv/: nix-profile-26.05-anvdcc2arw7kqrvw  nix-profile-26.05-anvdcc2arw7kqrvw.rc
agent/: main_agent.py
analysis/: failure_analysis.md
data/: synthetic_gen.py
engine/: llm_judge.py  retrieval_eval.py  runner.py
poject_name.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reports/: benchmark_results.json  summary.json
